--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "deploy": "fly deploy"
+    "deploy-m": "fly deploy",
+    "deploy-w": "flyctl deploy"
   },
   "keywords": [],
   "author": "benni94",
